--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,11 @@
     "outDir": "./dist",
     "declarationMap": true,
     "types": ["vitest/globals"]
-  }
+  },
+  "exclude": [
+    "src/**/*.test.ts",
+    "src/**/*.spec.ts",
+    "**/__tests__",
+    "node_modules"
+  ]
 }
